--- a/mock.html.haml
+++ b/mock.html.haml
@@ -2,27 +2,59 @@
 %html
   %head
     %title Magic Draft Deck
-    %link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
-    %link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css")
+    %link{ rel: "stylesheet",
+           href: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"}
     %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
   %body
-    %div.container-fluid
-      %div.row
-        %div.col-md-1
-        %div.col-md-10
-          %h2 Enter your draft deck
-    %div.container-fluid
-      %div.row
-        %div.col-md-2
-          Things one
-        %div.col-md-10
-          %form.form-inline
-            %div.form-group
-              %label(for="set") Set
-              %select#set.form-control
-                %option(value="KTR") Khans of Tarkir
-                %option(value="FRF") Fate Reforged
-            %div.form-group
-              %label(for="cardNumber") Card No.
-              %input#cardNumber.form-control(type="number" placeholder="0")
-            %button.btn.btn-default(type="submit") Send invitation
+    %nav.navbar.navbar-default
+      .container-fluid
+        .navbar-header
+          %a.navbar-brand{:href => "#"}
+            MtG Draft Master
+    .container-fluid
+      .row
+        .col-md-1
+        .col-md-11
+          %form
+            .row
+              .col-xs-3
+                .form-group
+                  %select.form-control
+                    %option{value: "KTK"} Khans of Tarkir
+                    %option{value: "FRF"} Fate Reforged
+              .col-xs-2
+                .form-group
+                  %input.form-control{ type: "text",
+                                       autofocus: "true",
+                                       placeholder: "Card No." }
+              .col-xs-1
+                %button.btn.btn-default{type: "submit"} Add Card
+    .container-fluid
+      .row
+        .col-md-2
+          %h4 Blue
+          %ul.list-unstyled
+            %li Counterspell
+            %li Counterspell
+        .col-md-2
+          %h4 Black
+          %ul.list-unstyled
+            %li Counterspell
+            %li Counterspell
+        .col-md-2
+          %h4 Red
+          %ul.list-unstyled
+            %li Counterspell
+            %li Counterspell
+        .col-md-2
+          %h4 Green
+          %ul.list-unstyled
+            %li Counterspell
+            %li Counterspell
+        .col-md-2
+          %h4 White
+          %ul.list-unstyled
+            %li Counterspell
+            %li Counterspell
+        .col-md-2
+          %h4 Other
