--- a/app/views/decks/index.html.haml
+++ b/app/views/decks/index.html.haml
@@ -1,4 +1,4 @@
-= form_for @deck, url: {action: "create"}, html: {class: "nifty_form"} do |f|
+= form_for @deck, url: {action: "create"} do |f|
   .row
     .col-xs-3.col-xs-offset-1
       .form-group
