--- a/app/views/decks/show.html.haml
+++ b/app/views/decks/show.html.haml
@@ -3,47 +3,17 @@
 .row
   .col-md-1
   .col-md-11
-    %form
+    = form_for @card, url: deck_path(@deck), html: { method: 'patch' } do |f|
       .row
-        .col-xs-3
+        .col-xs-3.col-xs-offset-1
           .form-group
-            %select.form-control
-              %option{value: "KTK"} Khans of Tarkir
-              %option{value: "FRF"} Fate Reforged
-        .col-xs-2
-          .form-group
-            %input.form-control{ type: "text",
-                                 autofocus: "true",
-                                 placeholder: "Card No." }
+            = f.text_field :number, class: 'form-control', autofocus: "true", placeholder: "Card No."
         .col-xs-1
-          %button.btn.btn-default{type: "submit"} Add Card
+          = f.submit "Add Card", class: 'btn btn-default'
+
 .container-fluid
 .row
-  .col-md-2
-    %h4 Blue
+  .col-md-4
     %ul.list-unstyled
-      %li Counterspell
-      %li Counterspell
-  .col-md-2
-    %h4 Black
-    %ul.list-unstyled
-      %li Counterspell
-      %li Counterspell
-  .col-md-2
-    %h4 Red
-    %ul.list-unstyled
-      %li Counterspell
-      %li Counterspell
-  .col-md-2
-    %h4 Green
-    %ul.list-unstyled
-      %li Counterspell
-      %li Counterspell
-  .col-md-2
-    %h4 White
-    %ul.list-unstyled
-      %li Counterspell
-      %li Counterspell
-  .col-md-2
-    %h4 Other
-
+    - @deck.cards.each do |card|
+      %li= card.name
