--- a/app/views/decks/show.html.haml
+++ b/app/views/decks/show.html.haml
@@ -5,15 +5,18 @@
   .col-md-11
     = form_for @card, url: deck_path(@deck), html: { method: 'patch' } do |f|
       .row
-        .col-xs-3.col-xs-offset-1
+        .col-xs-2.col-xs-offset-1
+          .form-group
+            = f.text_field :set, class: 'form-control', autofocus: "true", placeholder: "Card No."
+        .col-xs-3
           .form-group
             = f.text_field :number, class: 'form-control', autofocus: "true", placeholder: "Card No."
         .col-xs-1
           = f.submit "Add Card", class: 'btn btn-default'
 
 .container-fluid
-.row
-  .col-md-4
-    %ul.list-unstyled
-    - @deck.cards.each do |card|
-      %li= card.name
+  .row
+    .col-xs-4.col-xs-offset-1
+      %ul
+        - @deck.cards.each do |card|
+          %li= card.name
