--- a/app/views/decks/show.html.haml
+++ b/app/views/decks/show.html.haml
@@ -7,10 +7,10 @@
       .row
         .col-xs-2.col-xs-offset-1
           .form-group
-            = f.text_field :set, class: 'form-control', autofocus: "true", placeholder: "Card No."
+            = f.select :set, %w{ FRF KTK }, {}, class: 'form-control'
         .col-xs-3
           .form-group
-            = f.text_field :number, class: 'form-control', autofocus: "true", placeholder: "Card No."
+            = f.number_field :number, class: 'form-control', autofocus: "true", placeholder: "Card No."
         .col-xs-1
           = f.submit "Add Card", class: 'btn btn-default'
 
