--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,7 @@
           %a.navbar-brand{:href => "#"}
             MtG Draft Master
     .container-fluid
+      - flash.each do |name, msg|
+        = content_tag :div, msg, class: name
+    .container-fluid
       = yield
