--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,6 @@
             MtG Draft Master
     .container-fluid
       - flash.each do |name, msg|
-        = content_tag :div, msg, class: name
+        = content_tag :div, msg, class: "flash-#{name}"
     .container-fluid
       = yield
