--- a/app/views/decks/show.html.haml
+++ b/app/views/decks/show.html.haml
@@ -14,9 +14,14 @@
         .col-xs-1
           = f.submit "Add Card", class: 'btn btn-default'
 
-.container-fluid
-  .row
-    .col-xs-4.col-xs-offset-1
-      %ul
-        - @deck.cards.each do |card|
-          %li= card.name
+.row
+  - (1..6).each do |i|
+    .col-xs-2
+      %h4= i < 6 ? i : '6+'
+      %ul.list-unstyled
+        - if i < 6
+          - @deck.cards.where(cmc: i).each do |card|
+            %li #{card.name}   #{card.mana_cost}
+        - else
+          - @deck.cards.where(cmc: (6..10000)).each do |card|
+            %li #{card.name}   #{card.mana_cost}
