--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,3 +17,6 @@
         = content_tag :div, msg, class: "flash-#{name}"
     .container-fluid
       = yield
+
+  - unless Rails.env.production?
+    %p Params: #{params}
