--- a/app/views/decks/index.html.haml
+++ b/app/views/decks/index.html.haml
@@ -3,6 +3,7 @@
     .col-xs-3.col-xs-offset-1
       .form-group
         = f.text_field :name, class: 'form-control', autofocus: "true", placeholder: "Deck Name"
+        = f.hidden_field :user_id, value: current_user.id
     .col-xs-1
       = f.submit "Create Deck", class: 'btn btn-default'
 
