--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,9 +13,9 @@
           .navbar-brand
             MtG Draft Master
         %ul.nav.navbar-nav
-          %li
-            %a{:href => "/"}
-              Home
+          %li= link_to 'Home', root_path
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to 'Logout', destroy_user_session_path
 
 
     .container-fluid
