--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
         %ul.nav.navbar-nav
           %li= link_to 'Home', root_path
         %ul.nav.navbar-nav.navbar-right
-          %li= link_to 'Logout', destroy_user_session_path
+          %li= link_to 'Logout', destroy_user_session_path, method: :delete
 
 
     .container-fluid
