--- a/app/views/decks/index.html.haml
+++ b/app/views/decks/index.html.haml
@@ -1,3 +1,9 @@
+= form_for @draft do |f|
+  .row
+    .col-xs-1
+      = f.hidden_field :owner_id, value: current_user.id
+      = f.submit "Create Draft", class: 'btn btn-default'
+
 = form_for @deck, url: {action: "create"} do |f|
   .row
     .col-xs-3.col-xs-offset-1
