--- a/app/views/drafts/show.html.haml
+++ b/app/views/drafts/show.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-xs-4.col-xs-offset-4
+  .col-xs-offset-3.col-xs-6
     %table.table
       %tr
         %th Player
@@ -13,6 +13,6 @@
           %td= "#{player.second_round_wins}-#{player.second_round_losses}"
           %td= "#{player.third_round_wins}-#{player.third_round_losses}"
 .row
-  .col-xs-1.col-xs-offset-4
+  .col-xs-offset-3.col-xs-2
     = form_for @round, url: draft_rounds_path(@draft) do |f|
       = f.submit "Pair #{next_round_ordinal(@draft)} Round", class: 'btn btn-default'
