--- a/app/views/matches/_match.html.haml
+++ b/app/views/matches/_match.html.haml
@@ -1,1 +1,9 @@
-= match
+.panel.panel-default
+  .panel-heading{ id: "heading_#{match.id}", role: 'tab' }
+    %h4.panel-title
+      %a{ href: "#collapse_#{match.id}", role: 'button', 'aria-expanded' => 'true', 'aria-controls' => 'true', data: { toggle: 'collapse', parent: '#accordian' } }
+        %span.glyphicon.glyphicon-chevron-right
+        = "#{match.player_one.name} vs. #{match.player_two.name}"
+  .panel-collapse.collapse{ id: "collapse_#{match.id}", role: 'tabpanel', 'aria-labelledby' => "heading_#{match.id}" }
+    .panel-body
+      = match
