Remove the draft show view at the beginning.

--- a/app/views/drafts/new.html.haml
+++ b/app/views/drafts/new.html.haml
@@ -8,4 +8,4 @@
           .form-group
             = p.label "name", class: 'sr-only'
             = p.text_field "name", class: 'form-control'
-      = f.submit class: 'btn btn-primary pull-right'
+      = f.submit 'Pair 1st Round', class: 'btn btn-primary pull-right'
