--- a/app/views/matches/_match.html.haml
+++ b/app/views/matches/_match.html.haml
@@ -1,17 +1,14 @@
-.panel{ class: "panel-#{match.completed ? 'default' : 'primary' }" }
+.panel{ class: panel_class_for(match), id: "match_#{match.id}_panel" }
   .panel-heading{ id: "heading_#{match.id}", role: 'tab' }
     %h4.panel-title
       %a{ href: "#collapse_#{match.id}", role: 'button', 'aria-expanded' => 'true', 'aria-controls' => 'true', data: { toggle: 'collapse', parent: '#accordian' } }
         %span.glyphicon.glyphicon-chevron-right
         = "#{match.player_one.name} vs. #{match.player_two.name}"
-      .pull-right
-        - if match.completed
-          = "#{match.player_one_wins}-#{match.player_two_wins}"
-        - else
-          In Progress
+      .pull-right{ id: "match_#{match.id}_stats" }
+        = stats_for(match)
   .panel-collapse.collapse{ id: "collapse_#{match.id}", role: 'tabpanel', 'aria-labelledby' => "heading_#{match.id}" }
     .panel-body
-      = form_for match, html: { class: 'form-inline' } do |f|
+      = form_for match, remote: true, html: { class: 'form-inline' } do |f|
         = f.hidden_field 'completed', value: 'true'
         .form-group{ style: 'margin-right: 10px;' }
           = f.label 'player_one_wins', "#{match.player_one.name} Wins"
